--- a/README.org
+++ b/README.org
@@ -3,13 +3,14 @@
 This repo contains a collection of my implementations for numerical 
 algorithms & visualizations from the field of computational physics.
 
+** Contents
 As of yet, I have (only) uploaded the following projects:
 - [[https://github.com/vincentmader/double-pendulum.py][Integration of the equations of motion for a double-pendulum (RK4)]]
 - [[https://github.com/vincentmader/random-walk_live-plot.py][2D random walk visualization in matplotlib-liveplot]]
 
 More to come in the future...
 
-*** Setup
+** Setup
 To be able to download these projects all at once, run
 #+begin_src shell
 git clone --recurse-submodules https://github.com/vincentmader/computational-physics
