added new links to `README`

--- a/README.org
+++ b/README.org
@@ -10,6 +10,8 @@ As of yet, I have (only) uploaded the following projects:
 - [[https://github.com/vincentmader/gaussian-dice-throws_live-plot.py][Visualization of Gaussian distribution emerging from sum of dice]]
 - [[https://github.com/vincentmader/finite-differences.py][Comparison of different finite difference schemes]]
 - [[https://github.com/vincentmader/lax-friedrichs-advection.py][Lax-Friedrichs integration of advection-diffusion equation]]
+- [[https://github.com/vincentmader/orbit-precalculations][Orbit Pre-Calculations]]
+- [[https://github.com/vincentmader/Cannonball Trajectories][Cannonball Trajectories]]
 
 More to come in the future...
 
